# todo2

./: .gitignore  README.md
interaction-layer/: Cargo.toml
interaction-layer/src/: http_client.rs  main.rs  models.rs  ollama_client.rs
lua/todo2/: README.md  archive.lua  autocmds.lua  autosave.lua  cache.lua  child.lua  commands.lua  config.lua  dependencies.lua  handlers.lua  init.lua  keymaps.lua  manager.lua  migration_cleanup.lua  module.lua  render.lua  store.lua  utf8.lua
lua/todo2/ai/: apply.lua  apply_stream.lua  context.lua  executor.lua  gateway.lua  git.lua  init.lua  multifile.lua  prompt.lua  retry.lua  state.lua  templates.lua  validate.lua
lua/todo2/autofix/: locator.lua  refactor.lua  verification.lua
lua/todo2/code_block/: init.lua
lua/todo2/core/: archive.lua  autofix.lua  autosave.lua  block_matcher.lua  block_signature.lua  code_block_parser.lua  embedding.lua  events.lua  init.lua  parser.lua  refactor.lua  state_manager.lua  stats.lua  status.lua  sync.lua  task_graph.lua  toggle.lua  utils.lua
lua/todo2/creation/: init.lua  manager.lua  service.lua  structure_context.lua
lua/todo2/keymaps/: archive.lua  definitions.lua  handlers.lua  init.lua
lua/todo2/link/: chain.lua  child.lua  cleaner.lua  creator.lua  deleter.lua  highlight.lua  init.lua  (+9 more)
rust-ai-rpc/: Cargo.toml
rust-ai-rpc/src/: main.rs
rust-ai-rpc/src/ai/: mod.rs  provider.rs
rust-ai-rpc/src/ai/providers/: mod.rs  ollama.rs
rust-ai-rpc/src/handler/: ai.rs  echo.rs  mod.rs
rust-ai-rpc/src/protocol/: action_type.rs  error.rs  mod.rs  request.rs  response.rs
(+142 files in other folders)
